--- a/index.html
+++ b/index.html
@@ -1,49 +1,16 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en">
 <head>
-    <meta charset=UTF-8>
-    <meta name=viewport content=width=device-width, initial-scale=1.0>
-    <link rel=stylesheet href=style.css>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script
-        src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <script src="./Untitled-1.js">    
+    
     </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script defer src=script.js></script>
-    <title>to do list</title>
 </head>
-<body class="container">
-    <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-10">
-            <form id="to-do-form" class="form-inline">
-                <div class="form-group">
-                    <input required placeholder="Task title here.." type="text" name="title" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <input required placeholder="Priority.." type="number" name="priority" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="add" class="btn btn-primary" /> 
-                </div>
-            </form>
-        </div>
-        <div class="col-md-4"></div>
-    </div>
-    <table id="tasks" class="table table-responsive">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">Title</th>
-                <th scope="col">Priority</th>
-                <th scope="col">Remove</th>
-            </tr>
-        </thead>
-        <tbody>
 
-        </tbody>
-    </table>
+<body>
     
 </body>
 </html>
